pdf: Always use poppler_document_save to avoid data loss

We used to use two methods to save a document: poppler_document_save
and poppler_document_save_a_copy. The latter only saves a copy of
the original document, discarding any change done (e.g. forms and
annotations). However, after a document has been modified and saved,
if there is no new change and the user saves the document, it will
discard even the previous saved changes to preserve a copy of the
original document.

By only using poppler_document_save to save the content of the
current document opened in Atril, to avoid data loss made between
saves.

https://bugzilla.gnome.org/show_bug.cgi?id=770012

Adapted from the original commit at:
https://gitlab.gnome.org/GNOME/evince/-/commit/26dc2f52

Co-authored-by: Eric Park <me@ericswpark.com>