backend/pdf/ev-poppler.cc
@@ -251,20 +251,14 @@ pdf_document_save (EvDocument  *document,
 	gboolean retval;
 	GError *poppler_error = NULL;
 
-	if (pdf_document->forms_modified || pdf_document->annots_modified) {
-		retval = poppler_document_save (pdf_document->document,
-						uri, &poppler_error);
-		if (retval) {
-			pdf_document->forms_modified = FALSE;
-			pdf_document->annots_modified = FALSE;
-		}
+	retval = poppler_document_save (pdf_document->document,
+					uri, &poppler_error);
+	if (retval) {
+		pdf_document->forms_modified = FALSE;
+		pdf_document->annots_modified = FALSE;
 	} else {
-		retval = poppler_document_save_a_copy (pdf_document->document,
-						       uri, &poppler_error);
-	}
-						       
-	if (! retval)
 		convert_error (poppler_error, error);
+	}
 
 	return retval;
 }
